Render all the acrobat powers

--- a/src/_layouts/class.html
+++ b/src/_layouts/class.html
@@ -1,3 +1,30 @@
 ---
 layout: single
+classes: wide
+title: Classes
+sidebar:
+nav: "classes"
 ---
+
+{% assign class = site.data.classes | where: "name", page.title | first %}
+
+{% assign name_lower = page.title | downcase %}
+{% assign talents = site.data.talents[name_lower] %}
+
+{% assign tiers = "Novice, Veteran, Master, Epic, Ribbon" | split: ", " %}
+
+<p>{{ class.brief }}</p>
+
+{% for tier2 in tiers %}
+{% if tier2 == "Ribbon" %}
+<h2>Ribbons</h2>
+{% else %}
+<h2>{{tier2}} Talents</h2>
+{% endif %}
+
+{% for power2 in talents %}
+{% if power2[1].tier == tier2 %}
+{% include power.html power=power2 %}
+{% endif %}
+{% endfor %}
+{% endfor %}
