--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -10,28 +10,27 @@
 -->
 <html lang="{{ site.locale | slice: 0,2 | default: " en" }}" class="no-js">
 
-<head>
+  <head>
     {% include head.html %}
     {% include head/custom.html %}
-</head>
+  </head>
 
-<body
-    class="layout--{{ page.layout | default: layout.layout }}{% if page.classes or layout.classes %}{{ page.classes | default: layout.classes | join: ' ' | prepend: ' ' }}{% endif %}">
+  <body class="layout--{{ page.layout | default: layout.layout }}{% if page.classes or layout.classes %}{{ page.classes | default: layout.classes | join: ' ' | prepend: ' ' }}{% endif %}">
     {% include_cached skip-links.html %}
     {% include_cached masthead.html %}
 
     <div class="initial-content">
-        {{ content }}
+      {{ content }}
     </div>
 
     {% if site.search == true %}
-    <div class="search-content">
+      <div class="search-content">
         {% include_cached search/search_form.html %}
-    </div>
+      </div>
     {% endif %}
 
     {% include scripts.html %}
 
-</body>
+  </body>
 
 </html>
