--- a/src/_includes/power.html
+++ b/src/_includes/power.html
@@ -18,9 +18,7 @@
       {% capture image_path %}/assets/generated_images/{{ power_name }}.png{% endcapture %}
       {% assign file = site.static_files | where: "path", image_path | first %}
       {% if file %}
-        <img src="{{ image_path }}">
-      {% elsif power_body.image %}
-        <img src="{{ power_body.image }}">
+        <img src="{{site.baseurl}}{{ image_path }}">
       {% endif %}
     </div>
 
