--- a/src/_sass/cards.scss
+++ b/src/_sass/cards.scss
@@ -1,29 +1,63 @@
+$bright-color: rgb(247, 208, 153);
+$dark-border-color: rgb(180, 139, 77);
+$light-background-color: rgb(248, 231, 208);
+
 .card-list {
   display: grid;
   grid-template-columns: repeat(auto-fill, 2.5in);
-  grid-gap: 5px;
+  grid-gap: 16px;
 }
 
 .card {
   width: 2.5in;
   height: 3.5in;
-  border: 2px solid $border-color;
-  border-radius: .125in;
-  background-color: rgb(248, 231, 208);
+  background-color: rgb(141, 137, 131);
+  border-radius: 0.125in;
+  position: relative;
+
+  .art {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    bottom: 0px;
+    right: 0px;
+
+    img {
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+      border-radius: 0.125in;
+    }
+  }
 
   .card-inner {
-    padding: 10px 18px;
+    padding: 10px 10px 16px 10px;
     display: flex;
     flex-direction: column;
     height: 100%;
+    border: 1px solid rgb(44, 31, 10);
+    border-radius: 0.125in;
+    z-index: 1;
+    position: relative;
+  }
+
+  .title-bar-outer {
+    border: 2px solid $bright-color;
+    border-radius: 10px / 16px;
   }
 
   .title-bar {
     display: flex;
     align-items: center;
+    padding: 0px 2px;
+    background-color: $light-background-color;
+    border: 2px solid $dark-border-color;
+    border-style: outset;
+    border-radius: 8px / 14px;
 
     .title-text {
       flex: auto;
+      padding: 0px 4px;
     }
 
     .inline-icon {
@@ -37,29 +71,41 @@
     }
   }
 
-  .art {
+  .space {
     flex: 1;
-    min-height: 0;
-    border: 2px solid $border-color;
+  }
 
-    img {
-      object-fit: cover;
-      width: 100%;
-      height: 100%;
-    }
+  .traits-outer {
+    border: 2px solid $bright-color;
+    border-radius: 7px / 12px;
+  }
+
+  .traits {
+    margin: 0;
+    padding: 0 4px;
+    font-size: 2.75mm !important;
+    background-color: $light-background-color;
+    border: 2px solid $dark-border-color;
+    border-style: outset;
+    border-radius: 5px / 10px;
+    font-weight: bold;
+    text-align: center;
+  }
+
+  .trait {
+    padding: 0px 4px;
+  }
+
+  .body-outer {
+    outline: 2px solid $bright-color;
+    margin: 0 6px;
   }
 
   .body {
     font-size: 2.5mm !important;
-    min-height: 1.4in;
-
-    .traits {
-      margin: 0;
-      padding-left: 0;
-    }
-
-    .trait {
-      padding: 0px 4px;
-    }
+    padding: 0px 2px;
+    background-color: rgba($light-background-color, 0.9);
+    border: 2px solid $dark-border-color;
+    border-style: inset;
   }
 }
