--- a/src/_sass/cards.scss
+++ b/src/_sass/cards.scss
@@ -14,6 +14,7 @@ $light-background-color: rgb(248, 231, 208);
   background-color: rgb(141, 137, 131);
   border-radius: 0.125in;
   position: relative;
+  line-height: normal;
 
   .art {
     position: absolute;
@@ -107,5 +108,10 @@ $light-background-color: rgb(248, 231, 208);
     background-color: rgba($light-background-color, 0.9);
     border: 2px solid $dark-border-color;
     border-style: inset;
+
+    p,
+    dl {
+      margin: 0 0 2px 0;
+    }
   }
 }
