--- a/src/_sass/cards.scss
+++ b/src/_sass/cards.scss
@@ -32,7 +32,7 @@ $light-background-color: rgb(248, 231, 208);
   }
 
   .card-inner {
-    padding: 10px 10px 16px 10px;
+    padding: 10px 8px 14px 8px;
     display: flex;
     flex-direction: column;
     height: 100%;
@@ -69,6 +69,7 @@ $light-background-color: rgb(248, 231, 208);
       border-bottom: none !important;
       font-size: 3.5mm !important;
       margin-top: 0 !important;
+      padding-right: 4px;
     }
   }
 
@@ -103,7 +104,7 @@ $light-background-color: rgb(248, 231, 208);
   }
 
   .body {
-    font-size: 2.5mm !important;
+    font-size: 2.3mm !important;
     padding: 0px 2px;
     background-color: rgba($light-background-color, 0.9);
     border: 2px solid $dark-border-color;
@@ -112,6 +113,18 @@ $light-background-color: rgb(248, 231, 208);
     p,
     dl {
       margin: 0 0 2px 0;
+    }
+
+    .tags {
+      display: grid;
+      grid-template-columns: max-content 1fr;
+      dt {
+        margin-top: 0;
+      }
+    }
+
+    ul {
+      padding-left: 12px;
     }
   }
 }
