--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -27,15 +27,17 @@ search: false
 // $masthead-link-color-hover: mix(#000, $text-color, 20%) !default;
 // $navicon-link-color-hover: mix(#000, $background-color, 30%) !default;
 
-$my-dark-red: #5F1616;
-$my-dark-blue: #23395B;
-$my-gray: #74776B;
+$my-dark-red: #5f1616;
+$my-dark-blue: #23395b;
+$my-gray: #74776b;
 $dark-border-color: mix(#000, $border-color, 25%);
 
 .search__toggle {
-  color: $masthead-link-color
+  color: $masthead-link-color;
 }
-.navicon, .navicon::before, .navicon::after {
+.navicon,
+.navicon::before,
+.navicon::after {
   color: $masthead-link-color;
   background-color: $masthead-link-color;
 }
@@ -44,24 +46,25 @@ $dark-border-color: mix(#000, $border-color, 25%);
   border-radius: 5px;
   background-color: $my-dark-blue;
   color: white;
-  padding: .4em;
-  padding-top: .3em;
+  padding: 0.4em;
+  padding-top: 0.3em;
   // font-size: 2em;
   font-variant: small-caps;
 }
 
 .page__content {
-  p, dl {
-    margin: 0 0 .25em 0;
+  p,
+  dl {
+    margin: 0 0 0.25em 0;
   }
   h2 {
     clear: both;
-    padding-bottom: .25em;
+    padding-bottom: 0.25em;
     border-radius: 5px;
     background-color: $my-dark-blue;
     color: white;
-    padding: .3em;
-    padding-top: .2em;
+    padding: 0.3em;
+    padding-top: 0.2em;
     font-size: 1.4em;
     font-variant: small-caps;
   }
@@ -74,14 +77,15 @@ $dark-border-color: mix(#000, $border-color, 25%);
     line-height: 24px;
   }
   h4 {
-    margin: .75em 0 .25em 0;
+    margin: 0.75em 0 0.25em 0;
     font-size: 1em;
     font-style: italic;
   }
   dd {
     font-size: 1em;
   }
-  dt, dd {
+  dt,
+  dd {
     display: inline;
   }
   dd:after {
@@ -91,34 +95,37 @@ $dark-border-color: mix(#000, $border-color, 25%);
 }
 
 th {
-  border-bottom: 1px solid $dark-border-color
+  border-bottom: 1px solid $dark-border-color;
 }
 td {
-  border-bottom: none
+  border-bottom: none;
 }
-tr, td, th {
+tr,
+td,
+th {
   padding-bottom: 0.2em;
   padding-top: 0.2em;
 }
 
 tr:nth-child(even) {
-  background-color: #ebdeca
+  background-color: #ebdeca;
 }
 tr:nth-child(odd) {
-  background-color: #e2cba4
+  background-color: #e2cba4;
 }
 
-
-ul li, ol li {
-  margin-bottom: 0
+ul li,
+ol li {
+  margin-bottom: 0;
 }
 ul {
   margin-block-start: 0;
-  margin-block-end: .5em;
+  margin-block-end: 0.5em;
 }
 
-body, table {
-  font-size: .8em;
+body,
+table {
+  font-size: 0.8em;
 }
 
 // Layout
@@ -137,7 +144,7 @@ aside {
   border: 1px solid $dark-border-color;
   border-radius: 0.25em;
   background-color: #dbc29b;
-  margin: .5em 0 1em 1em;
+  margin: 0.5em 0 1em 1em;
 
   padding: 1em;
   h3 {
@@ -154,13 +161,14 @@ aside {
 summary {
   overflow: hidden;
   list-style: none;
-  ::marker, ::-webkit-details-marker {
+  ::marker,
+  ::-webkit-details-marker {
     display: none;
   }
   // background-color: #e4cca5;
   // box-shadow: 0 0 0 1px $border-color inset;
   h4 {
-    margin-top: .25em !important;
+    margin-top: 0.25em !important;
   }
 }
 summary:hover {
@@ -170,16 +178,17 @@ summary:hover {
 
 // Special classes
 
-.power, .item {
+.power,
+.item {
   overflow: hidden;
-  margin: .5em 0 0 0;
+  margin: 0.5em 0 0 0;
 
   summary {
-    padding: 0 .25em;
+    padding: 0 0.25em;
   }
 
   h3 {
-    margin-top: .5em;
+    margin-top: 0.5em;
   }
   .traits {
     margin: 0;
@@ -203,9 +212,9 @@ summary:hover {
   // flex-direction: column;
   // margin-top: .25em;
   // border: 1px solid $my-dark-red;
-  border-left: .25em solid $my-dark-red;
-  padding-left: .75em;
-  margin: .25em .4em;
+  border-left: 0.25em solid $my-dark-red;
+  padding-left: 0.75em;
+  margin: 0.25em 0.4em;
 }
 
 .fluff {
@@ -221,7 +230,7 @@ summary:hover {
   text-transform: uppercase;
 
   background: #e7c48b;
-  border:  $my-dark-red 1px solid;
+  border: $my-dark-red 1px solid;
   font-weight: bold;
 }
 .trait > a {
@@ -233,12 +242,13 @@ summary:hover {
 
 .specialize {
   border-collapse: separate;
-  border-spacing: .5em 0;
+  border-spacing: 0.5em 0;
   border: none;
-  margin-left: -.5em;
-  margin-right: -.5em;
+  margin-left: -0.5em;
+  margin-right: -0.5em;
 
-  td, th {
+  td,
+  th {
     border: 1px solid $dark-border-color;
   }
   td {
@@ -248,11 +258,18 @@ summary:hover {
 
 .inline-icon {
   height: 1.3em;
-  margin-top: -0.2em;
+  margin-top: -0.3em;
+}
+
+p {
+  .inline-icon {
+    position: relative;
+    top: 0.15em;
+  }
 }
 
 .alignright {
-	float: right;
+  float: right;
 }
 
 .roll-me-one blockquote {
@@ -271,9 +288,8 @@ button {
   }
 }
 
-
 .tabset {
-  margin: 1em 0 .25em 0;
+  margin: 1em 0 0.25em 0;
 }
 
 .tabset > input {
